--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <p class="card-number-display">0000 0000 0000 0000</p>
           <p class="cardholder-display">Abdurahman Aramide</p>
           <p class="expiry-month-display">12</p>
-          <p class="expiry-divider-display"></p>
+          <p class="expiry-divider-display">/</p>
           <p class="expiry-year-display">2025</p>
         </div>
 
         <div class="card-back">
           <img src="img/bg-card-back.png" alt="" class="card-back-img" />
-          <p class="cvc-display"></p>
+          <p class="cvc-display">000</p>
         </div>
       </section>
 
@@ -43,6 +43,7 @@
             id="cardholder-name"
             name="cardholder-name"
             placeholder="e.g Ramadan Aramide"
+            required
           />
           <!-- <p id="errorMsg"></p> -->
 
@@ -53,6 +54,7 @@
             id="card-number"
             name="card-number"
             placeholder="e.g Ramadan Aramide"
+            required
           />
           <!-- <p id="card-num-error"></p> -->
 
@@ -65,6 +67,7 @@
                 class="expiry"
                 name="expiry-date"
                 placeholder="MM"
+                required
               />
 
               <input
@@ -72,6 +75,7 @@
                 class="expiry"
                 name="expiry-date"
                 placeholder="YYYY"
+                required
               />
               <!-- <p id="expiry-error"></p> -->
             </label>
@@ -84,6 +88,7 @@
                 name="cvc"
                 class="cvc"
                 placeholder="e.g 123"
+                required
               />
               <!-- <p id="error-cvc"></p> -->
             </label>
@@ -92,10 +97,12 @@
         </form>
 
         <div id="thank-you" class="thank-you hidden">
-          <img src="img/icon-complete.svg" alt="" />
-          <h2 id="thank-you-header">Thank you!</h2>
-          <p>We've added your card details</p>
-          <button id="reset">Reset Details</button>
+          <div class="the-thank-you">
+            <img src="img/icon-complete.svg" alt="" />
+            <h2 id="thank-you-header">Thank you!</h2>
+            <p>We've added your card details</p>
+            <button id="reset">Reset Details</button>
+          </div>
         </div>
       </section>
     </div>
